2007-06-01  Christian W. Zuckschwerdt  <zany@triq.net>

	* added hci selection support, drafted by Manuel Naranjo

2007-05-27  Christian W. Zuckschwerdt  <zany@triq.net>

	* prefer PCSUITE over FTP, req. by Martin Storsjö for Series 60 2nd Ed.
	* switched obexftp cli to new discovery api 

2007-05-26  Christian W. Zuckschwerdt  <zany@triq.net>

	* fixed compile error with >=swig-1.3.28

2007-05-21  Christian W. Zuckschwerdt  <zany@triq.net>

	* renamed sdp browse function

2007-05-02  Christian W. Zuckschwerdt  <zany@triq.net>

	* fixed month/day swapping in atotime, spotted by Dr. Johannes Zellner

2006-09-19  Christian W. Zuckschwerdt  <zany@triq.net>

	* fixed invalid conn_id in disconnect rep. by Alan J. McFarlane

2006-08-03  Christian W. Zuckschwerdt  <zany@triq.net>

	* better create flag handling in setpath

2006-07-31  Christian W. Zuckschwerdt  <zany@triq.net>

	* Changed LDADD to LIBADD sug. by Sergey Vlasov <vsu@altlinux.ru>

2006-06-28  Christian W. Zuckschwerdt  <zany@triq.net>

	* obexftpd clean up by Hendrik Sattler
	* 64-bit fixes by Hendrik Sattler
	* Removed all (dangerous) obex_headerdata_t casts

2006-05-28  Christian W. Zuckschwerdt  <zany@triq.net>

	* Reorganized all swig-dependant Makefiles
	* Applied cobex write patch from Simon Ruggier <Simon80@gmail.com>
	* Applied   from Frode Isaksen <fisaksen@bewan.com>

2006-05-26  Christian W. Zuckschwerdt  <zany@triq.net>

	* Fixes to obexftpd suggested by Hendrik Sattler

2006-05-24  Christian W. Zuckschwerdt  <zany@triq.net>

	* Added ruby binding
	* Added preliminary discovery function

2006-05-16  Christian W. Zuckschwerdt  <zany@triq.net>

	* Change __S_IFDIR to S_IFDIR with fallback sug. by Alex Kanavin
	* Added old CLI switches and documentation sug. by Hendrik Sattler

2006-04-26  Christian W. Zuckschwerdt  <zany@triq.net>

	* Fixed the -g CLI switch (bug reported by many people)

2006-03-08  Christian W. Zuckschwerdt  <zany@triq.net>

	* Added obexfsd written by Alan Zhang <vibra@tom.com>